# mymath

./: .gitignore  README.md  mymath_test.py  pyproject.toml
mymath/: common.py
