[tool.poetry]
name = "mymath"
version = "0.1.0"
description = ""
authors = ["curt <curt.k@kakaomobility.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
